--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "mongodb": "^3.5.4",
